# aldo

./: .gitignore  .replit  PACKAGING_GUIDE.md  PKGBUILD  README.md  aldo.py  aldo_cli.py  config.py  invoice.py  local_build_test.sh  main.py  move_clean_files.sh  pyproject.toml  setup.cfg  setup.py  setup.sh  simple_build_test.sh  storage.py  test_scenario.sh  update_version.py  virtualenv_setup.sh
aldo/: .SRCINFO  AUR_SUBMISSION.md  COMPLETE_PACKAGING_GUIDE.md  LICENSE  PKGBUILD  __init__.py  config.py  core.py  invoice.py  storage.py
aldo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aldo/aldo/: cli.py
aldo/aldo.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
attached_assets/: Pasted--Aldo-Invoice-Tracking-and-Confirmation-Feature-Overview-Add-an-automatic-invoice-generation-sy-1747899456135.txt  Pasted--Aldo-Work-Hours-Tracker-and-Invoice-Generator-Project-Requirements-Create-a-command-line-int-1747499868710.txt  Pasted--Packaging-Aldo-CLI-App-for-Arch-Linux-Current-Situation-I-have-a-working-Python-CLI-applicatio-1747656151453.txt
backup/: pyproject.toml
backup/aldo/: local_build_test.sh  storage.py
backup/aldo/aldo.egg-info/: PKG-INFO
clean_project/: pyproject.toml  setup_virtualenv.sh
cleaned_aldo/: QUICK_START_GUIDE.md  README.md  setup.py
cleaned_aldo/aldo/: __init__.py  config.py  core.py
templates/: base.html  index.html  invoice.html  invoice_styles.css  invoice_template.html  log_work.html  settings.html  summary.html
tests/: test_aldo.py
