[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aldo"
version = "1.0.3"
description = "Work Hours Tracker and Invoice Generator for Freelancers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Aldo Developer", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "click>=8.0.0",
    "reportlab>=3.6.0",
    "appdirs>=1.4.4",
]

[project.scripts]
aldo = "aldo.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/aldo"
"Bug Tracker" = "https://github.com/yourusername/aldo/issues"